apps/student-reg/k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-reg
  namespace: student-reg-stag
spec:
  ingressClassName: nginx
  rules:
  - host: student-reg-staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-reg
            port:
              number: 80
